--- a/style.css
+++ b/style.css
@@ -1,48 +1,47 @@
-*{
+* {
     font-family: "Arsenal", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
+
 body {
     margin: 0;
     width: 100%;
     overflow-x: hidden;
     box-sizing: border-box;
-
 }
 
-
-/*Login Page*/
-.login-container {
+/* Shared styles for login and forgot password pages */
+.login-container, .fpassword-container {
     display: flex;
 }
 
-.login-image {
+.login-image, .fpassword-image {
     flex: 50%;
 }
 
-.login-image>img {
+.login-image>img, .fpassword-image>img {
     width: 100%;
     height: 830px;
 }
 
-.login-text {
+.login-text, .fpassword-text {
     flex: 50%;
     text-align: center;
     line-height: 50px;
     margin-top: 50px;
 }
 
-.login-text>h1 {
+.login-text>h1, .fpassword-text>h1 {
     font-size: 55px;
     color: #142a43;
 }
 
-.login-form {
+.login-form, .fpassword-form {
     padding: 8px 100px;
 }
 
-.login-form>h3 {
+.login-form>h3, .fpassword-form>h3 {
     font-size: 30px;
     color: #142a43;
 }
@@ -52,99 +51,38 @@ body {
     font-size: 17px;
 }
 
-.login-form>a:hover {
+.login-form>a:hover, .login-form>button:hover, .fpassword-form>button:hover {
     color: #142a43;
     font-weight: bold;
 }
 
-.login-form>input[type=email] {
+.login-form>input[type=email], .login-form>input[type=password], .fpassword-form>input[type=email] {
     width: 100%;
-    padding: 0px 20px;
+    padding: 0 20px;
     margin: 18px 0;
     border-radius: 4px;
     border: 2px solid silver;
 }
 
-.login-form>input[type=password] {
-    width: 100%;
-    padding: 0px 20px;
-    margin: 18px 0;
-    border-radius: 4px;
-    border: 2px solid silver;
-}
-
-.login-form>button {
-    width: 50%;
+.login-form>button, .fpassword-form>button {
     background-color: #1F426B;
     color: white;
-    padding: 0px 20px;
-    margin: 40px 0 0 0;
+    padding: 0 20px;
     font-size: 20px;
     border-radius: 6px;
 }
 
-.login-form>button:hover {
-    background-color: #142a43;
-}
-
-
-/*Forgot Passsword Page*/
-.fpassword-container {
-    display: flex;
-}
-
-.fpassword-image {
-    flex: 50%;
-}
-
-.fpassword-image>img {
-    width: 100%;
-    height: 830px;
-}
-
-.fpassword-text {
-    flex: 50%;
-    text-align: center;
-    line-height: 50px;
-    margin-top: 50px;
-}
-
-.fpassword-text>h1 {
-    font-size: 55px;
-}
-
-.fpassword-form {
-    padding: 68px 30px;
-}
-
-.fpassword-form>h3 {
-    font-size: 22px;
-}
-
-.fpassword-form>input[type=email] {
-    width: 80%;
-    padding: 0px 20px;
-    margin: 18px 0;
-    border-radius: 4px;
-    border: 2px solid silver;
+.login-form>button, .fpassword-form>button {
+    width: 50%;
+    margin: 40px 0 0 0;
 }
 
 .fpassword-form>button {
     width: 40%;
-    background-color: #1F426B;
-    color: white;
-    padding: 0px 20px;
     margin: 60px 0 30px 0;
-    font-size: 20px;
-    border-radius: 6px;
 }
 
-.fpassword-form>button:hover {
-    background-color: #142a43;
-}
-
-/*Header.php css*/
-
+/*Header styles*/
 .textStyling {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -169,6 +107,8 @@ body {
 
 nav {
     flex: 1;
+    display: flex;
+    justify-content: flex-start;
 }
 
 nav ul {
@@ -176,7 +116,6 @@ nav ul {
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: flex-start;
 }
 
 nav ul li {
@@ -188,21 +127,19 @@ nav ul li a {
     text-decoration: none;
     color: #000;
     font-weight: bold;
-    display: block;
 }
 
 .nav-dropdown {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
 
 .nav-dropdown a {
     color: black;
-    padding: 20px 20px;
-    text-align: none;
+    padding: 20px;
 }
 
 .nav-dropdown a:hover {
@@ -213,7 +150,6 @@ nav ul li a {
 nav ul li:hover .nav-dropdown {
     display: block;
 }
-
 
 .login .login-btn {
     background-color: #2D3A5C;
@@ -228,8 +164,7 @@ nav ul li:hover .nav-dropdown {
     background-color: #142a43;
 }
 
-/*footer.php styles*/
-
+/*Footer styles*/
 .footerContainer {
     background-color: black;
     color: white;
@@ -255,7 +190,7 @@ nav ul li:hover .nav-dropdown {
 
 .footerContainer .footer-content .section img {
     display: block;
-    margin: 0 auto 10px auto;
+    margin: 0 auto 10px;
 }
 
 .footerContainer .footer-content .section h3 {
@@ -290,34 +225,31 @@ nav ul li:hover .nav-dropdown {
     font-size: 14px;
 }
 
-/*Sign-Up Page*/
-.signup {
+/*Sign-Up Page and User Profile*/
+.signup, .usrprofile {
     margin-top: 50px;
 }
 
-.signup>h1 {
+.signup>h1, .usrprofile>h1 {
     text-align: center;
     color: #142a43;
+    font-weight: bold;
 }
 
-.signup-text {
-    margin-top: 20px;
-}
-
-.signup-container {
+.signup-container, .usrprofile-container {
     display: flex;
     flex-wrap: nowrap;
-    padding: 0px 200px;
+    padding: 0 200px;
 }
 
-.signup-container>div {
+.signup-container>div, .usrprofile-container>div {
     border: 1px solid black;
     padding: 20px;
     margin: 30px;
     border-radius: 10px;
 }
 
-.signup-container>div img {
+.signup-container>div img, .usrprofile-container>div img {
     width: 100%;
     border-radius: 10px;
 }
@@ -326,12 +258,7 @@ nav ul li:hover .nav-dropdown {
     margin: 50px 390px;
 }
 
-.signup-form>h1 {
-    text-align: center;
-    color: #142a43;
-    margin-top: 20px;
-}
-.signup-form > input[type=email], input[type=password], input[type=text] {
+.signup-form>input[type=email], .signup-form>input[type=password], .signup-form>input[type=text], #Gender {
     width: 100%;
     padding: 15px 20px;
     margin: 18px 0;
@@ -354,7 +281,7 @@ nav ul li:hover .nav-dropdown {
     background-color: #142a43;
 }
 
-/*index.php page CSS */
+/*index.php styles */
 .banner {
     background-image: url('Images/video-bg-2.jpg');
     background-size: cover;
@@ -365,9 +292,8 @@ nav ul li:hover .nav-dropdown {
     padding: 150px 20px;
     position: relative;
     overflow: hidden;
-    background-position: center center;
+    background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .banner-content {
@@ -409,7 +335,6 @@ nav ul li:hover .nav-dropdown {
     background-color: rgba(0, 0, 0, 0.8);
 }
 
-
 .btn-services {
     margin-top: 10px;
     padding: 10px 20px;
@@ -419,425 +344,103 @@ nav ul li:hover .nav-dropdown {
     border-radius: 15px;
 }
 
-.why-choose-us,
-.testimonials,
-.team {
+.why-choose-us, .testimonials, .team, .our-services-section, .about-us {
     padding: 40px 20px;
     text-align: center;
     background-color: #f7f7f7;
 }
 
-.our-services-section {
-    padding: 40px 20px;
-    text-align: center;
-    display: flex;
-    justify-content: space-around;
-    background-color: #f7f7f7;
-}
-
-.service,
-.testimonial,
-.team-member {
-    margin: 20px;
+.team-member, .service, .testimonial, .feature {
+    margin: 20px auto;
     display: inline-block;
     vertical-align: top;
-    ;
 }
 
-.why-choose-us .text-p,
-.team-p {
+.why-choose-us .text-p, .team-p {
     color: #99D3E1;
     margin-bottom: 10px;
     font-size: 1.7em;
 }
 
-.why-choose-us h2,
-.team h2 {
+.why-choose-us h2, .team h2, .about-text h2 {
     font-size: 2em;
     color: #0c0078;
     margin-bottom: 40px;
 }
 
-.features {
+.features, .about-content {
     display: flex;
     justify-content: space-around;
 }
 
-.feature {
+.feature, .about-text {
     width: 25%;
     background-color: white;
     padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.service img,
-.feature img,
-.team-member img {
-    width: 100px;
-    height: 100px;
-    margin-bottom: 20px;
-}
-
-.service h3,
-.feature h3,
-.team-member h3 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-    color: #142a43;
-}
-
-.feature p {
-    font-size: 1em;
-    color: #666;
-}
-
-.about-us {
-    background-color: #f7f7f7;
-    padding: 40px 20px;
+.feature img, .about-content img {
+    width: 100%;
+    border-radius: 5px;
 }
 
 .about-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     flex-wrap: wrap;
-}
-
-.about-content img {
-    width: 100%;
-    max-width: 400px;
-    margin-right: 30px;
+    gap: 20px;
 }
 
 .about-text {
-    max-width: 600px;
+    width: 50%;
 }
 
-.about-text h2,
-.why-choose-us h2 {
-    font-size: 2em;
-    margin-bottom: 20px;
-    color: #0c0078;
+.our-services-section {
+    padding: 50px 0;
 }
 
-.about-text ul {
-    list-style: none;
-    padding: 10px;
+.service {
+    width: 28%;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
 }
 
-.about-text ul li {
-    margin-bottom: 10px;
-}
-
-
-.about-text .btn-contact {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #99D3E1;
-    color: white;
-    text-decoration: none;
-    border-radius: 15px;
-}
-
-.about-text-p,
-.text-p {
-    color: #99D3E1;
-    text-decoration: solid;
-
+.service img {
+    width: 100%;
+    border-radius: 10px;
 }
 
 .testimonials {
-    display: flex;
-    height: 100vh;
-    overflow: hidden;
+    background-color: #f7f7f7;
+    padding: 50px 0;
+    text-align: center;
 }
 
-.testimonial-bg {
-    width: 50%;
-    position: relative;
+.testimonial {
+    width: 30%;
+    background-color: white;
+    padding: 30px;
+    border-radius: 10px;
+    margin: 0 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.background-img {
+.testimonial img {
     width: 100%;
-    height: 70%;
-    object-fit: cover;
-}
-
-.testimonial-content {
-    width: 50%;
-    padding: 40px;
-    box-sizing: border-box;
-}
-
-.testimonial-container {
-    display: flex;
-    overflow: hidden;
-    position: relative;
-}
-
-.testimonial-slide {
-    min-width: 100%;
-    transition: transform 0.5s ease;
-    padding: 0 10px;
-}
-
-.testimonial-card {
-    background: #ffffff;
-    padding: 20px;
-    margin: 10px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.testimonial-img {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    margin-bottom: 20px;
 }
 
-.role {
-    font-size: 0.9em;
-    color: #777;
-    margin: 5px 0;
+.testimonial p {
+    font-style: italic;
+    color: #333;
 }
 
-.testimonial-text {
-    font-size: 0.9em;
-    margin: 10px 0;
-    ;
-}
-
-.stars {
-    color: #f39c12;
-}
-
-.testimonial-nav {
+footer {
+    background-color: #333;
+    color: white;
+    padding: 20px 0;
     text-align: center;
-    margin-top: 20px;
-}
-
-.dot {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: #ccc;
-    margin: 0 5px;
-    cursor: pointer;
-}
-
-.dot.active {
-    background: #333;
-}
-
-.hidden {
-    opacity: 0;
-    transform: translateY(50px);
-    transition: opacity 1s ease-out, transform 1s ease-out;
-}
-
-.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-
-/* Mobile screen for all the pages */
-@media only screen and (max-width: 768px) {
-    .login-container {
-        flex-direction: column;
-    }
-
-    .login-form {
-        padding: 8px 20px;
-    }
-
-    .fpassword-container {
-        flex-direction: column;
-    }
-
-    .fpassword-form {
-        padding: 8px 10px;
-    }
-
-    .signup-container {
-        flex-direction: column;
-        flex-wrap: wrap;
-        padding: 0;
-    }
-
-    .signupForm {
-        margin: 0px 40px;
-    }
-
-    .signup-form>button {
-        padding: 14px 0px;
-    }
-
-    /*index.php styles for mobile view*/
-    nav {
-        display: none;
-    }
-
-
-    .our-services-section {
-        display: block;
-    }
-
-    .service {
-        width: 100%;
-        margin: 20px auto;
-    }
-
-    .our-services-section,
-    .about-us,
-    .why-choose-us,
-    .testimonials,
-    .team {
-        padding: 40px 20px;
-    }
-
-    .service,
-    .testimonial,
-    .team-member,
-    .feature {
-        width: 100%;
-        margin: 20px auto;
-        text-align: center;
-    }
-
-    .about-content img {
-        margin-right: 0;
-        margin-bottom: 20px;
-        display: flex;
-    }
-
-    .banner {
-        padding: 100px 20px;
-    }
-
-    .banner-content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 20px;
-        text-align: center;
-        background-color: rgba(0, 0, 0, 0.5);
-        width: 90%;
-        max-width: 90%;
-    }
-
-
-    .banner-content h1 {
-        font-size: 1em;
-        margin-bottom: 10px;
-    }
-
-    .banner-content p {
-        font-size: 0.8em;
-        line-height: 1.5;
-        margin-bottom: 20px;
-    }
-
-    .banner-nav {
-        position: absolute;
-        
-    }
-
-    .banner-nav a {
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        padding: 10px;
-        font-size: 1.5em;
-        border-radius: 50%;
-        margin: 0 5px;
-    }
-
-    .banner-nav a:hover {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-
-    .btn-services {
-        margin-top: 6px;
-        padding: 5px 10px;
-        background-color: #99D3E1;
-        color: white;
-        text-decoration: none;
-        border-radius: 15px;
-    }
-
-    .features {
-        display: block;
-    }
-
-    .feature {
-        width: 100%;
-        margin: 20px auto;
-        text-align: center;
-    }
-
-    .testimonial-bg {
-        display: none;
-    }
-
-    .testimonial-content {
-        padding: 20px;
-        width: 100%;
-    }
-
-    .testimonial-slide {
-
-        padding: 0 10px;
-    }
-
-    .testimonial-card {
-        margin: 10px 0;
-    }
-
-
-    .testimonial-img {
-        width: 80px;
-        height: 80px;
-    }
-
-    .testimonial-card h3 {
-        font-size: 18px;
-        margin-bottom: 8px;
-    }
-
-    .testimonial-card .role {
-        font-size: 14px;
-        margin-bottom: 10px;
-    }
-
-    .testimonial-text {
-        font-size: 14px;
-        line-height: 1.6;
-        margin-bottom: 15px;
-    }
-
-    .stars {
-        font-size: 24px;
-        color: #ffd700;
-        margin-top: 10px;
-    }
-
-    .testimonial-nav {
-        text-align: center;
-        margin-top: 20px;
-    }
-
-    .testimonial-nav .dot {
-        width: 12px;
-        height: 12px;
-        margin: 0 5px;
-    }
-
-
-
 }
