--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-
-
-*{
+* {
     font-family: "Arsenal", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
+
 body {
     margin: 0;
     width: 100%;
@@ -145,6 +144,8 @@ body {
     background-color: #142a43;
 }
 
+
+
 /*Header.php css*/
 
 .textStyling {
@@ -163,6 +164,7 @@ body {
     align-items: center;
     justify-content: space-between;
     width: 100%;
+    position: relative;
 }
 
 .logo img {
@@ -216,7 +218,6 @@ nav ul li:hover .nav-dropdown {
     display: block;
 }
 
-
 .login .login-btn {
     background-color: #2D3A5C;
     color: #ffffff;
@@ -229,6 +230,15 @@ nav ul li:hover .nav-dropdown {
 .login .login-btn:hover {
     background-color: #142a43;
 }
+
+.menu-toggle {
+    display: none;
+}
+
+.nav-menu {
+    display: none;
+}
+
 
 /*footer.php styles*/
 
@@ -293,27 +303,32 @@ nav ul li:hover .nav-dropdown {
 }
 
 /*Sign-Up Page*/
-.signup, .usrprofile {
+.signup,
+.usrprofile {
     margin-top: 50px;
 }
 
-.signup>h1, .usrprofile>h1 {
+.signup>h1,
+.usrprofile>h1 {
     text-align: center;
     color: #142a43;
     font-weight: bold;
 }
 
-.signup-text, .usrprofile-text {
+.signup-text,
+.usrprofile-text {
     margin-top: 20px;
 }
 
-.signup-container, .usrprofile-container {
+.signup-container,
+.usrprofile-container {
     display: flex;
     flex-wrap: nowrap;
     padding: 0px 200px;
 }
 
-.signup-container>div, .usrprofile-container>div {
+.signup-container>div,
+.usrprofile-container>div {
     border: 1px solid black;
     padding: 20px;
     margin: 30px;
@@ -340,7 +355,10 @@ nav ul li:hover .nav-dropdown {
     margin-top: 20px;
     font-weight: bold;
 }
-.signup-form > input[type=email], input[type=password], input[type=text] {
+
+.signup-form>input[type=email],
+input[type=password],
+input[type=text] {
     width: 100%;
     padding: 15px 20px;
     margin: 18px 0;
@@ -348,7 +366,7 @@ nav ul li:hover .nav-dropdown {
     border: 2px solid silver;
 }
 
-#Gender{
+#Gender {
     width: 100%;
     padding: 15px 20px;
     margin: 18px 0;
@@ -371,391 +389,35 @@ nav ul li:hover .nav-dropdown {
     background-color: #142a43;
 }
 
-/*index.php page CSS */
-.banner {
-    background-image: url('Images/video-bg-2.jpg');
-    background-size: cover;
-    color: white;
-    text-align: center;
-    height: 100%;
-    width: 100%;
-    padding: 150px 20px;
-    position: relative;
-    overflow: hidden;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.banner-content {
-    max-width: 100%;
-    margin: 0 auto;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.banner-content h1 {
-    font-size: 3em;
-    margin-bottom: 20px;
-}
-
-.banner-nav {
-    position: absolute;
-    top: 50%;
-    left: 20px;
-    right: 60px;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-}
-
-.banner-nav a {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 10px;
-    text-decoration: none;
-    font-size: 2em;
-    border-radius: 50%;
-}
-
-.banner-nav a:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-
-.btn-services {
-    margin-top: 10px;
-    padding: 10px 20px;
-    background-color: #99D3E1;
-    color: white;
-    text-decoration: none;
-    border-radius: 15px;
-}
-
-.why-choose-us {
-    padding: 30px 20px;
-    text-align: center;
-    background-color: #f7f7f7;
-}
-.testimonials{
-    padding: 20px;
-    text-align: center;
-    background-color: #f7f7f7;
-}
-
-.team{
-    padding: 5px 10px;
-    text-align: center;
-    background-color: #f7f7f7;
-}
-
-.our-services-section {
-    padding: 40px 20px;
-    text-align: center;
-    display: flex;
-    justify-content: space-around;
-    background-color: #f7f7f7;
-}
-.team-member {
-    max-width: 300px;
-    text-align: center;
-    display: inline-block;
-    vertical-align: top;
-    margin: 60px;
-}
-
-.service,
-.testimonial{
-    margin: 20px;
-    display: inline-block;
-    vertical-align: top;
-    ;
-}
-
-.why-choose-us .text-p,
-.team-p {
-    color: #99D3E1;
-    margin-bottom: 10px;
-    font-size: 1.7em;
-}
-
-.why-choose-us h2,
-.team h2 {
-    font-size: 2em;
-    color: #0c0078;
-    margin-bottom: 40px;
-}
-
-.features {
-    display: flex;
-    justify-content: space-around;
-}
-
-.feature {
-    width: 25%;
-    background-color: white;
-    padding: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    text-align: center;
-}
-
-.service img,
-.feature img{
-    width: 100px;
-    height: 100px;
-    margin-bottom: 20px;
-}
-
-.team-member img{
-    width: auto; 
-    height: auto; 
-    max-width: 400px;  
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    margin-bottom: 20px;
-}
-
-.service h3,
-.feature h3,
-.team-member h3 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-    color: #142a43;
-}
-
-.feature p {
-    font-size: 1em;
-    color: #666;
-}
-
-.about-us {
-    background-color: #f7f7f7;
-    padding: 40px 20px;
-}
-
-.about-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.about-content img {
-    width: 100%;
-    max-width: 400px;
-    margin-right: 30px;
-}
-
-.about-text {
-    max-width: 600px;
-}
-
-.about-text h2,
-.why-choose-us h2 {
-    font-size: 2em;
-    margin-bottom: 20px;
-    color: #0c0078;
-}
-
-.about-text ul {
-    list-style: none;
-    padding: 10px;
-}
-
-.about-text ul li {
-    margin-bottom: 10px;
-}
-
-
-.about-text .btn-contact {
-    display: inline-block;
-    margin-top: 20px;
-    padding: 10px 20px;
-    background-color: #99D3E1;
-    color: white;
-    text-decoration: none;
-    border-radius: 15px;
-}
-
-.about-text-p,
-.text-p {
-    color: #99D3E1;
-    text-decoration: solid;
-
-}
-
-.testimonials {
-    display: flex;
-    height: 70vh;
-    overflow: hidden;
-}
-
-.testimonial-bg {
-    width: 50%;
-    position: relative;
-}
-
-.background-img {
-    width: 100%;
-    height: 70%;
-    object-fit: cover;
-}
-
-.testimonial-content {
-    width: 50%;
-    padding: 30px;
-    box-sizing: border-box;
-}
-
-.testimonial-container {
-    display: flex;
-    overflow: hidden;
-    position: relative;
-}
-
-.testimonial-slide {
-    min-width: 100%;
-    transition: transform 0.5s ease;
-    padding: 0 10px;
-}
-
-.testimonial-card {
-    background: #ffffff;
-    padding: 20px;
-    margin: 10px;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-.testimonial-img {
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-}
-
-.role {
-    font-size: 0.9em;
-    color: #777;
-    margin: 5px 0;
-}
-
-.testimonial-text {
-    font-size: 0.9em;
-    margin: 10px 0;
-    ;
-}
-
-.stars {
-    color: #f39c12;
-}
-
-.testimonial-nav {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.dot {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: #ccc;
-    margin: 0 5px;
-    cursor: pointer;
-}
-
-.dot.active {
-    background: #333;
-}
-
-.hidden {
-    opacity: 0;
-    transform: translateY(50px);
-    transition: opacity 1s ease-out, transform 1s ease-out;
-}
-
-.visible {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.scrolling-animation {
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    background-color: #430660;
-    color: white;
-    padding: 30px;
-}
-
-.animation-container {
-    display: flex;
-    white-space: nowrap;
-    animation: scroll-left-right 2s linear infinite;
-}
-
-.animation-container ul {
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.animation-container li {
-    flex: none;
-    padding: 0 20px;
-    margin-right: 16%;
-    font-size: 32px;
-    line-height: 32px;
-    font-weight: 700;
-}
-
-@keyframes scroll-left-right {
-    0% {
-        transform: translateX(0);
-    }
-    50% {
-        transform: translateX(-10px);
-    }
-    100% {
-        transform: translateX(0);
-    }
-}
-
-
 /* User Profile Setup code */
-.userProfileForm> h1{
+.userProfileForm>h1 {
     text-align: center;
     margin-top: 30px;
     color: #142a43;
     font-weight: bold;
 }
 
-.row{
+.row {
     margin: 50px 70px;
     display: flex;
     flex-wrap: wrap;
     padding: 20px 140px;
 }
-.form-section{
+
+.form-section {
     flex: 33%;
     max-width: 33%;
     padding: 0 4px;
 }
 
-.form-section > h3{
+.form-section>h3 {
     font-weight: bold;
 }
 
-.form-section> input[type="text"],
-.form-section> input[type="number"],
-.form-section> textarea,
-.form-section> select {
+.form-section>input[type="text"],
+.form-section>input[type="number"],
+.form-section>textarea,
+.form-section>select {
     width: 100%;
     height: 50px;
     padding: 5px 20px;
@@ -763,8 +425,8 @@ nav ul li:hover .nav-dropdown {
     border-radius: 4px;
     border: 2px solid silver;
 }
-  
-.row> button {
+
+.row>button {
     width: 30%;
     background-color: #1F426B;
     color: white;
@@ -773,155 +435,6 @@ nav ul li:hover .nav-dropdown {
     margin: 30px auto;
     font-size: 20px;
     border-radius: 6px;
-}
-
-/*contact us page*/
-
-.contact-us {
-    display: flex;
-    justify-content: space-between;
-    padding: 26px;
-    gap: 20px;
-    margin-top: 10px;
-}
-
-.contact-info {
-    flex: 1;
-    max-width: 35%;
-    margin-top: 2.5%;
-    margin-left: 2%;
-}
-
-.contact-info-item {
-    background-color: #FAF9FB;
-    margin-bottom: 28px;
-    margin-left: 2px;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-
-.contact-info-item h3 {
-    margin: 0;
-    margin-bottom: 10px;
-    font-size: 18px;
-    font-family: Josefin Sans;
-}
-
-.contact-info-item p {
-    margin: 0;
-    font-size: 16px;
-    font-family: Josefin Sans;
-}
-
-.contact-form {
-    flex: 1;
-    max-width: 60%;
-    padding: 10px;
-}
-
-.contact-form h2 {
-    font-size: 20px;
-    margin: 2%;
-    font-family: Josefin Sans;
-}
-
-.contact-form h3 {
-    font-size: 40px;
-    font-family: Josefin Sans;
-    color: #99D3E1; 
-    margin-top: 0%;
-    margin-bottom: 1%;
-    margin-left: 2%;
-    
-}
-
-.contact-form form {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-}
-
-.contact-form input, .contact-form textarea {
-    width: 10%;
-    padding: 16px;
-    border: 1px solid #f9f7f7;
-    border-radius: 5px;
-    font-size: 16px;
-    background-color: #FAF9FB;
-}
-
-.contact-form input[type="text"]{
-    width: calc(40% - 10px);
-    border: 1px solid #f9f7f75e;
-    color: black;
-}
-
-.contact-form input[type="email"]{
-    padding: 15px 20px;
-    margin: 18px 0;
-    border-radius: 4px;
-    border: 1px solid #f9f7f7;
-    width: calc(40% - 10px);
-    background-color: #FAF9FB;
-}
-
-.contact-form textarea {
-    width: 100%;
-    resize: vertical;
-    height: 100px;
-}
-
-.contact-form .form-footer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 10px;
-}
-
-.contact-form .form-footer p {
-    font-size: 14px;
-    white-space: nowrap;
-}
-
-.form-footer p {
-    margin: 0px 40px 30px 0px;
-}
-
-.contact-form button {
-    background-color: #2D3A5C;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 100%;
-
-}
-
-.contact-form button:hover {
-    background-color: #001833;
-}
-
-.contact-form input, .contact-form textarea {
-    background-color: #f8f8f8;
-}
-
-.contact-form input::placeholder, .contact-form textarea::placeholder {
-    color: #bfbfbf;
-}
-
-.map-container {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-.map-container h2 {
-    margin-bottom: 10px;
-    text-align: center;
-    font-size: 20px;
-    font-family: Josefin Sans;
 }
 
 
@@ -943,23 +456,24 @@ nav ul li:hover .nav-dropdown {
         padding: 8px 10px;
     }
 
-    .signup-container, .usrprofile-container {
+    .signup-container,
+    .usrprofile-container {
         flex-direction: column;
         flex-wrap: wrap;
         padding: 0;
     }
 
-    .row{
+    .row {
         margin: 0px;
         padding: 10px 20px;
     }
 
-    .form-section{
+    .form-section {
         flex: 100%;
         max-width: 100%;
     }
 
-    .form-section > h3{
+    .form-section>h3 {
         margin-top: 15px;
     }
 
@@ -971,267 +485,110 @@ nav ul li:hover .nav-dropdown {
         padding: 14px 0px;
     }
 
-    /*index.php styles for mobile view*/
+    /*footer mobile view styles*/
+    .footerContainer {
+        text-align: center;
+    }
+
+    .footerContainer .footer-content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .footerContainer .footer-content .section {
+        margin: 20px 0;
+        flex: 1;
+        min-width: 200px;
+    }
+
+    .footerContainer .footer-content .section img {
+        margin: 0 auto 10px;
+    }
+
+
+    /*Header mobile version styles*/
+    .menu-toggle {
+        display: block;
+        cursor: pointer;
+        font-size: 24px;
+    
+    }
+
+    .menu-toggle i {
+        font-size: 24px;
+        color: #333;
+    }
+
+    .nav-menu {
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
+        width: 250px;
+        height: 100%;
+        background: #fff;
+        box-shadow: -2px 0 5px rgba(0, 0, 0, 0.3);
+        padding: 20px;
+        z-index: 1000;
+        overflow-y: auto;
+        transition: transform 0.3s ease-in-out;
+        transform: translateX(100%);
+    }
+
+    .nav-menu.active {
+        display: block;
+        transform: translateX(0);
+    }
+
+    .nav-menu ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    .nav-menu ul li {
+        margin: 20px 0;
+    }
+
+    .nav-menu ul li a {
+        text-decoration: none;
+        color: #000;
+        font-weight: bold;
+        display: block;
+        padding: 10px 0;
+    }
+
     nav {
         display: none;
     }
 
-
-    .our-services-section {
-        display: block;
-    }
-
-    .service {
-        width: 100%;
-        margin: 20px auto;
-    }
-
-    .our-services-section,
-    .about-us,
-    .why-choose-us{
-        padding: 40px;
-    }
-
-    .testimonials{
-        padding: 30px;
-        height: auto;
-    }
-
-    .team{
-        padding: 20px;
-    }
-
-    .service,
-    .testimonial,
-    .team-member,
-    .feature {
-        width: 100%;
-        margin: 20px auto;
-        text-align: center;
-        display: block;
-    }
-    .team-member img {
-        width: auto; 
-        height: auto; 
-        max-width: 80%; 
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-        margin-bottom: 20px;
-    }
-    .team-member h3 {
-        font-size: 1.2em; 
-        margin-bottom: 10px;
-    }
-
-    .team-member p {
-        font-size: 1em; 
-        color: #666;
-    }
-
-    .about-content img {
-        margin-right: 0;
-        margin-bottom: 20px;
-        display: flex;
-    }
-
-    .banner {
-        padding: 100px 20px;
-        width: auto;
-    }
-
-    .banner-content {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        padding: 20px;
-        text-align: center;
-        background-color: rgba(0, 0, 0, 0.5);
-        width: 90%;
-        max-width: 90%;
-    }
-
-
-    .banner-content h1 {
-        font-size: 1em;
-        margin-bottom: 10px;
-    }
-
-    .banner-content p {
-        font-size: 0.8em;
-        line-height: 1.5;
-        margin-bottom: 20px;
-    }
-
-    .banner-nav {
-        position: absolute;
-    }
-
-    .banner-nav a {
-        background-color: rgba(0, 0, 0, 0.5);
-        color: white;
-        padding: 10px;
-        font-size: 1.5em;
-        border-radius: 50%;
-        margin: 0 5px;
-    }
-
-    .banner-nav a:hover {
-        background-color: rgba(0, 0, 0, 0.8);
-    }
-
-    .btn-services {
-        margin-top: 6px;
-        padding: 5px 10px;
-        background-color: #99D3E1;
-        color: white;
-        text-decoration: none;
-        border-radius: 15px;
-    }
-
-    .features {
-        display: block;
-    }
-
-    .feature {
-        width: 100%;
-        margin: 20px auto;
-        text-align: center;
-    }
-
-    .testimonial-bg {
+    .login {
         display: none;
     }
 
-    .testimonial-content {
-        padding: 20px;
-        width: 100%;
+
+}
+
+/*to block and unblock the menu option for mobile & desktop version*/
+@media (min-width: 801px) {
+    .menu-toggle {
+        display: none;
     }
 
-    .testimonial-slide {
-
-        padding: 0 10px;
+    .nav-menu {
+        display: none;
     }
 
-    .testimonial-card {
-        margin: 10px 0;
-    }
-
-
-    .testimonial-img {
-        width: 80px;
-        height: 80px;
-    }
-
-    .testimonial-card h3 {
-        font-size: 18px;
-        margin-bottom: 8px;
-    }
-
-    .testimonial-card .role {
-        font-size: 14px;
-        margin-bottom: 10px;
-    }
-
-    .testimonial-text {
-        font-size: 14px;
-        line-height: 1.6;
-        margin-bottom: 15px;
-    }
-
-    .stars {
-        font-size: 24px;
-        color: #ffd700;
-        margin-top: 10px;
-    }
-
-    .testimonial-nav {
-        text-align: center;
-        margin-top: 20px;
-    }
-
-    .testimonial-nav .dot {
-        width: 12px;
-        height: 12px;
-        margin: 0 5px;
-    }
-
-    /*contact us page */
-    .contact-us {
-        flex-direction: column;
-        padding: 10px;
-    }
-    
-    .contact-info {
-        max-width: 100%;
-        margin-top: 20px;
-        margin-left: 0;
+    nav {
         display: flex;
-        flex-direction: column;
-        align-items: center; 
-    }
-    
-    .contact-info-item {
-        width: 100%; 
-        max-width: 600px; 
-        margin-bottom: 20px; 
-        text-align: center; 
-    }
-    
-    .contact-form {
-        max-width: 100%;
-        padding: 10px;
-    }
-    
-    .contact-form h2, .contact-form h3 {
-        margin: 10px;
-        text-align: center;
-    }
-    
-    .contact-form form {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
-    }
-    
-    .contact-form input[type="text"], 
-    .contact-form input[type="email"],
-    .contact-form textarea {
-        width: calc(100% - 20px);
-        margin: 5px auto;
-    }
-    
-    .contact-form button {
-        width: 100%;
-        padding: 15px;
-    }
-    
-    .map-container {
-        margin: 20px auto;
-    }
-    .ban-nav{
-        width: auto;
-        padding: 35px;
     }
 
-    /*footer mobile view*/
-    .footerContainer {
-        text-align: center; 
+    .headerContainer {
+        justify-content: space-between;
     }
 
-    .footerContainer .footer-content {
-        flex-direction: column; 
-        align-items: center; 
-        text-align: center; 
+    .login {
+        margin-left: auto;
     }
-
-    .footerContainer .footer-content .section {
-        margin: 20px 0; 
-        flex: 1;
-        min-width: 200px; 
-    }
-
-    .footerContainer .footer-content .section img {
-        margin: 0 auto 10px; 
-    }
-
 }
